<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                style="@style/TextStyle.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/read_setting"
                android:textSize="@dimen/textSizeSmall"/>

        <View style="@style/DevideStyle"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    style="@style/TextStyle.Gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/read_setting_light"
                    android:textSize="@dimen/textSizeSmall"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    style="@style/TextStyle.Gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/read_setting_textStyle"
                    android:textSize="@dimen/textSizeSmall"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    style="@style/TextStyle.Gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/read_setting_textSize"
                    android:textSize="@dimen/textSizeSmall"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    style="@style/TextStyle.Gray"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/read_setting_bg"
                    android:textSize="@dimen/textSizeSmall"/>
        </LinearLayout>
    </LinearLayout>
</layout>