<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View"/>

        <variable
                name="xmlmodel"
                type="com.libra.poetry.setting.xmlmodel.SettingViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include layout="@layout/layout_titlebar"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{xmlmodel.questionClick}"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        style="@style/TextStyle.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/question"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{xmlmodel.suggestClick}"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        style="@style/TextStyle.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/suggest"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{xmlmodel.aboutPassClick}"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        style="@style/TextStyle.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/about"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="@{xmlmodel.loginFlag?View.VISIBLE:View.GONE}">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center_vertical"
                    android:onClick="@{xmlmodel.modifyPassClick}"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        style="@style/TextStyle.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/modify_password"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:visibility="@{xmlmodel.loginFlag?View.VISIBLE:View.GONE}">

            <TextView
                    style="@style/TextStyle.Black"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{xmlmodel.logoutClick}"
                    android:text="@string/logout"
                    android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</layout>